--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
 
 
     <ImageView
-        android:id="@+id/img_detail_film"
+        android:id="@+id/img_pobeg_is_shoushenka"
         android:layout_width="200dp"
         android:layout_height="206dp"
         android:layout_marginStart="16dp"
@@ -36,7 +36,7 @@
             android:text="@string/detali_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_detail_film" />
+            app:layout_constraintTop_toBottomOf="@+id/img_pobeg_is_shoushenka" />
 
     <ImageView
         android:id="@+id/img_Green_mile"
