ищменил метод онклик, создал класс Филмз

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:contentDescription="shoushenk"
+            android:contentDescription="0"
             android:linksClickable="false"
             android:onClick="onClickButton"
             android:text="@string/detali_button"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:contentDescription="greenMile"
+            android:contentDescription="1"
             android:onClick="onClickButton"
             android:text="@string/detali_button"
             app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:contentDescription="forestGamp"
+            android:contentDescription="2"
             android:onClick="onClickButton"
             android:text="@string/detali_button"
             app:layout_constraintBottom_toBottomOf="parent"
