--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -22,8 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
-            android:textSize="24sp"
-            android:textStyle="bold"
+            style="@style/FilmName"
             android:gravity="center"/>
 
         <ImageView
