--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,4 +15,8 @@
         android:id="@+id/nav_about"
         android:title="@string/drawer_about" />
 
+    <item
+        android:id="@+id/nav_exit"
+        android:title="@string/drawer_exit"/>
+
 </menu>
