--- a/app/src/main/res/layout/fragment_add_film.xml
+++ b/app/src/main/res/layout/fragment_add_film.xml
@@ -1,48 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--Содержимое макета Добавить новый фильм -->
+<?xml version="1.0" encoding="utf-8"?><!--Содержимое макета Добавить новый фильм -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <com.google.android.material.textfield.TextInputLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/new_film_name"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_double_vertical_margin"
-            android:layout_marginBottom="@dimen/activity_double_vertical_margin"
-            android:hint="@string/new_film_name" />
+            android:layout_height="wrap_content">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/new_film_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_double_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_double_vertical_margin"
+                android:hint="@string/new_film_name" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/new_film_description"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/new_film_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/new_film_description" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <include layout="@layout/chips_addnewfilm" />
+
+        <Button
+            android:id="@+id/add_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/new_film_description" />
+            android:layout_gravity="center_horizontal"
+            android:text="@string/add_film"
+            app:backgroundTint="@color/colorPrimaryDark" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
 
-   <include layout="@layout/chips_addnewfilm"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/add_button"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/add_film"
-        app:backgroundTint="@color/colorPrimaryDark" />
-
-</LinearLayout>
+</androidx.core.widget.NestedScrollView>
