--- a/app/src/main/res/layout/chips_addnewfilm.xml
+++ b/app/src/main/res/layout/chips_addnewfilm.xml
@@ -1,50 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.chip.ChipGroup
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.chip.ChipGroup xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:chipSpacing="8dp"
-    >
+    app:chipSpacing="8dp">
 
     <com.google.android.material.chip.Chip
+        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:text="@string/ujasi"
-        app:checkedIconVisible="true"
-        app:checkedIcon="@drawable/ic_done_24px"/>
+        app:checkedIcon="@drawable/ic_done_24px"
+        app:checkedIconVisible="true" />
 
     <com.google.android.material.chip.Chip
+        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:text="@string/dramma"
-        app:checkedIconVisible="true"
-        app:checkedIcon="@drawable/ic_done_24px"/>
+        app:checkedIcon="@drawable/ic_done_24px"
+        app:checkedIconVisible="true" />
 
     <com.google.android.material.chip.Chip
+        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:text="@string/comedia"
-        app:checkedIconVisible="true"
-        app:checkedIcon="@drawable/ic_done_24px"/>
+        app:checkedIcon="@drawable/ic_done_24px"
+        app:checkedIconVisible="true" />
 
     <com.google.android.material.chip.Chip
+        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:text="@string/triller"
-        app:checkedIconVisible="true"
-        app:checkedIcon="@drawable/ic_done_24px"/>
+        app:checkedIcon="@drawable/ic_done_24px"
+        app:checkedIconVisible="true" />
 
     <com.google.android.material.chip.Chip
+        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.Chip.Choice"
         android:text="@string/prikluchenie"
-        app:checkedIconVisible="true"
-        app:checkedIcon="@drawable/ic_done_24px"/>
+        app:checkedIcon="@drawable/ic_done_24px"
+        app:checkedIconVisible="true" />
 
 </com.google.android.material.chip.ChipGroup>
