--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0A1127</color>
-    <color name="colorPrimaryDark">#0C2144</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#101F53</color>
+    <color name="colorPrimaryDark">#143E79</color>
+    <color name="colorAccent">#2E2A2A</color>
 </resources>
