--- a/app/src/main/res/layout/favorites.xml
+++ b/app/src/main/res/layout/favorites.xml
@@ -9,24 +9,25 @@
     app:cardElevation="2dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/favorites_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_gravity="center" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
         <ImageView
             android:id="@+id/favorites_image"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1.0"
-             />
+            android:scaleType="centerCrop" />
 
     </LinearLayout>
 
