Добавили проверку на интернет и WIFI БД обновляется в WorkManager Добавленно напоминание о фильме

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,6 +10,13 @@
             android:title="@string/drawer_main"
             android:icon="@drawable/ic_home_24px"/>
 
+        <item
+            android:id="@+id/nav_remind"
+            android:title="@string/remind"
+            android:icon="@drawable/ic_add_alarm_black_24dp"
+            />
+
+
     </group>
 
     <item
